Fix: 'Prix normal' and 'Prix orga' are now aligned

--- a/src/styles/sell.css
+++ b/src/styles/sell.css
@@ -29,6 +29,8 @@
   right: 0;
   top: 0;
   font-size: 28px;
+  align-text: left;
+  min-width: 186px;
 }
 
 .b-sell__title__back {
